--- a/src/demo.scss
+++ b/src/demo.scss
@@ -254,6 +254,8 @@ table {
 
   a {
     @extend .btn-ghost;
+    padding: 5px 10px;
+    font-size: 14px;
   }
 
 }
